# AllRyricsFullStacked

./: index.html
AllLyrics/: README.md  Signup.html  add-lyrics.js  admin.html  admin.js  index.html  login.html  login.js  lyrics.html  lyrics.js  package-lock.json  package.json  users.html
AllLyrics/css/: style.css
AllLyrics/src/: App.jsx  Header.jsx
AllyricsBackend/: .env  Cargo.toml
AllyricsBackend/src/: auth.rs  main.rs  music.rs  services.rs  upload.rs
