[package]
name = "allyrics_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
chrono = "0.4.24"
dotenv = "0.15.0"
md5 = "0.7.0"
multipart = "0.18.0"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
tokio = "1.26.0"
tokio-util = "0.7.7"
uuid = "1.3.0"


